--- a/src/style.scss
+++ b/src/style.scss
@@ -1,11 +1,11 @@
 html,
 body {
+  margin: 0;
   width: 100%;
   height: 100%;
-  background-color: #333333;
-  color: #ffffff;
+  background-color: #ffffff;
+  color: #333333;
   font-size: 16px;
-  margin: 0;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -15,9 +15,9 @@ p {
 
 main {
   display: grid;
+  padding: 1rem;
   width: calc(100% - 2rem);
   height: calc(100% - 2rem);
-  padding: 1rem;
 
   grid-template-columns: 1fr 2fr;
   grid-template-rows: 1fr;
@@ -32,8 +32,8 @@ main {
 
       .message {
         display: flex;
-        height: max-content;
         padding: 0.3rem 0;
+        height: max-content;
 
         > * {
           padding: 0.2rem;
