--- a/src/style.scss
+++ b/src/style.scss
@@ -31,6 +31,11 @@ body {
 
   .message__bullet {
     padding: 0 8px;
+
+    &:hover {
+      cursor: pointer;
+      color: #ff0000;
+    }
   }
 
   .message__text {
