--- a/src/style.scss
+++ b/src/style.scss
@@ -31,6 +31,7 @@ body {
 
   .message__bullet {
     padding: 0 8px;
+    user-select: none;
 
     &:hover {
       cursor: pointer;
@@ -41,11 +42,17 @@ body {
   .message__text {
     font-size: 16px;
   }
+
+  .chat-box {
+    position: relative;
+    left: -60px;
+  }
 }
 
 .chat-box {
   .chat-box__list {
     display: table;
+    padding-left: 10px;
   }
 
   .chat-box__input {
